--- a/src/Pages/Home/PopularClasses/PopularClasses.css
+++ b/src/Pages/Home/PopularClasses/PopularClasses.css
@@ -1,16 +1,12 @@
 :root {
     --surface-color: #fff; 
-    --curve: 40;
+    /* --curve: 40; */
   }
   
-  * {
-    box-sizing: border-box;
-  }
-  
-  body {
+  /* body {
     font-family: "Noto Sans JP", sans-serif;
     background-color: #fef8f8;
-  }
+  } */
   .cards {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -18,6 +14,7 @@
     margin: 4rem 5vw;
     padding: 0;
     list-style-type: none;
+  
   }
   
   .card {
