--- a/src/Pages/Home/PopularClasses/PopularClasses.css
+++ b/src/Pages/Home/PopularClasses/PopularClasses.css
@@ -9,9 +9,9 @@
   } */
   .cards {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    /* grid-template-columns: repeat(auto-fit, minmax(370px, 1fr)); */
     gap: 2rem;
-    margin: 4rem 5vw;
+    margin-bottom: 20px;
     padding: 0;
     list-style-type: none;
   
@@ -106,7 +106,7 @@
   .card__description {
     padding: 0 2em 2em;
     margin: 0;
-    color: #d7bdca;
+    color: black;
     font-family: "MockFlowFont";
     display: -webkit-box;
     -webkit-box-orient: vertical;
