--- a/src/Pages/AlllClasses/AllCard.css
+++ b/src/Pages/AlllClasses/AllCard.css
@@ -15,6 +15,7 @@
     padding: 0;
     list-style-type: none;
   
+  
   }
   
   .card {
@@ -24,11 +25,13 @@
     border-radius: calc(var(--curve) * 1px);
     overflow: hidden;
     text-decoration: none;
+   
+   
   }
   
   .card__image {
-    width: 100%;
-    height: auto;
+    width: 600px;
+    height: 400px;
   }
   
   .card__overlay {
@@ -79,8 +82,8 @@
   
   .card__thumb {
     flex-shrink: 0;
-    width: 50px;
-    height: 50px;
+    width: 35px;
+    height: 35px;
     border-radius: 50%;
   }
   
@@ -88,6 +91,7 @@
     font-size: 1em;
     margin: 0 0 0.3em;
     color: #6a515e;
+    margin-top: 20px;
   }
   
   .card__tagline {
