payment maythod daynamic

--- a/src/Pages/DashBoard/Payment/Style.css
+++ b/src/Pages/DashBoard/Payment/Style.css
@@ -8,7 +8,7 @@
 
 body,
 html {
-  /* background-color: #f6f9fc; */
+  background-color: #f6f9fc;
   font-size: 15px;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 }
